--- a/views/index.pug
+++ b/views/index.pug
@@ -83,7 +83,7 @@
 
     <section class="icons-container">
       <div class="icons">
-        <img src="../images/icon-1.png" alt="" />
+        <img src="/icon-1.png" alt="" />
         <div class="info">
           <h3>Secure delivery</h3>
           <span>on all orders</span>
@@ -91,7 +91,7 @@
       </div>
 
       <div class="icons">
-        <img src="images/icon-2.png" alt="" />
+        <img src="/icon-2.png" alt="" />
         <div class="info">
           <h3>10 days returns</h3>
           <span>moneyback guarantee</span>
@@ -99,7 +99,7 @@
       </div>
 
       <div class="icons">
-        <img src="images/icon-3.png" alt="" />
+        <img src="/icon-3.png" alt="" />
         <div class="info">
           <h3>Inspected Cars</h3>
           <span>on all orders</span>
@@ -107,7 +107,7 @@
       </div>
 
       <div class="icons">
-        <img src="images/icon-4.png" alt="" />
+        <img src="/icon-4.png" alt="" />
         <div class="info">
           <h3>secure payments</h3>
           <span>protected by RaastID</span>
@@ -126,7 +126,7 @@
         <div class="box">
           <span class="discount">-15%</span>
           <div class="image">
-            <img src="../images/mclaren-p1-070.jpg" alt="" />
+            <img src="/mclaren-p1-070.jpg" alt="" />
             <div class="icons">
               <a href="#" class="fas fa-heart"></a>
               <a href="#" class="cart-btn">add to cart</a>
@@ -158,7 +158,7 @@
         <div class="box">
           
           <div class="image">
-            <img src="images/Yamaha R1.jpg" alt="" />
+            <img src="/Yamaha R1.jpg" alt="" />
             <div class="icons">
               <a href="#" class="fas fa-heart"></a>
               <a href="#" class="cart-btn">add to cart</a>
@@ -174,7 +174,7 @@
         <div class="box">
           
           <div class="image">
-            <img src="images/koenigsegg-regera-mmp-1-1591115837.jpg" alt="" />
+            <img src="/koenigsegg-regera-mmp-1-1591115837.jpg" alt="" />
             <div class="icons">
               <a href="#" class="fas fa-heart"></a>
               <a href="#" class="cart-btn">add to cart</a>
@@ -190,7 +190,7 @@
         <div class="box">
          
           <div class="image">
-            <img src="images/Ducati V4.jpg" alt="" />
+            <img src="/Ducati V4.jpg" alt="" />
             <div class="icons">
               <a href="#" class="fas fa-heart"></a>
               <a href="#" class="cart-btn">add to cart</a>
@@ -206,7 +206,7 @@
         <div class="box">
           
           <div class="image">
-            <img src="images/lamborghini_sian_roadster_2020-HD.jpg" alt="" />
+            <img src="/lamborghini_sian_roadster_2020-HD.jpg" alt="" />
             <div class="icons">
               <a href="#" class="fas fa-heart"></a>
               <a href="#" class="cart-btn">add to cart</a>
@@ -222,7 +222,7 @@
         <div class="box">
 
           <div class="image">
-            <img src="images/honda cbr.jpg" alt="" />
+            <img src="/honda cbr.jpg" alt="" />
             <div class="icons">
               <a href="#" class="fas fa-heart"></a>
               <a href="#" class="cart-btn">add to cart</a>
@@ -238,7 +238,7 @@
         <div class="box">
           
           <div class="image">
-            <img src="images/toyota-crown-front-1649952756.jpg" alt="" />
+            <img src="/toyota-crown-front-1649952756.jpg" alt="" />
             <div class="icons">
               <a href="#" class="fas fa-heart"></a>
               <a href="#" class="cart-btn">add to cart</a>
@@ -254,7 +254,7 @@
         <div class="box">
           
           <div class="image">
-            <img src="images/123.jpg" alt="" />
+            <img src="/123.jpg" alt="" />
             <div class="icons">
               <a href="#" class="fas fa-heart"></a>
               <a href="#" class="cart-btn">add to cart</a>
@@ -289,7 +289,7 @@
             Totally satisfied with their service. Bought all of my cars from this store they never dissapoint.they also have a good collection of bikes. used their cars during the shoooting of "John Wick". 
           </p>
           <div class="user">
-            <img src="images/Keanu reaves.jpg" alt="" />
+            <img src="/Keanu reaves.jpg" alt="" />
             <div class="user-info">
               <h3>Keanu Reaves</h3>
               <span>happy customer</span>
@@ -310,7 +310,7 @@
             Great service i must say. Bought around 2-3 cars from them. Excellent service everytime. payment methods are super secured .Staff are trained professionals and very co-operative through out the process.
           </p>
           <div class="user">
-            <img src="images/Rowan.jpg" alt="" />
+            <img src="/Rowan.jpg" alt="" />
             <div class="user-info">
               <h3>Rowan Atkinson</h3>
               <span>happy customer</span>
@@ -331,7 +331,7 @@
             have used their service only once. all in one stop for everything related to cars. the buying process was butter smooth. did not faced any difficulty through out the process. really appreciated and recommended.
           </p>
           <div class="user">
-            <img src="images/Henry 2.jpg" alt="" />
+            <img src="/Henry 2.jpg" alt="" />
             <div class="user-info">
               <h3>Henry Cavill</h3>
               <span>happy customer</span>
@@ -359,7 +359,7 @@
         </form>
 
         <div class="image">
-          <img src="./images/cartoon-japan-tuned-car-red-sun-background-back-view-vector-illustration-cartoon-japan-tuned-car-red-sun-background-back-109762920.jpg" alt="" />
+          <img src="/cartoon-japan-tuned-car-red-sun-background-back-view-vector-illustration-cartoon-japan-tuned-car-red-sun-background-back-109762920.jpg" alt="" />
         </div>
       </div>
     </section>
@@ -399,7 +399,7 @@
           <a href="#">+92 315 7562568/ 021 555 9999</a>
           <a href="#">apnigaari@gmail.com</a>
           <a href="#">Karachi, Pakistan - 658427</a>
-          <img src="images/payment.png" alt="" />
+          <img src="/payment.png" alt="" />
         </div>
       </div>
 
