--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,7 +115,7 @@ header .fa-bars {
   display: flex;
   align-items: center;
   min-height: 100vh;
-  background: url(../images/986817-dark-car-vehicle-Nissan-Nissan-Skyline-Nissan-Skyline.jpg)
+  background: url(/986817-dark-car-vehicle-Nissan-Nissan-Skyline-Nissan-Skyline.jpg)
     no-repeat;
   background-size: cover;
   background-position: center;
